--- a/404.md
+++ b/404.md
@@ -1,5 +1,12 @@
 ---
 permalink: /404.html
 ---
-
-You done messed up!
+# 404 - You done messed up!
+There are many pages on this website. But this ain't one of 'em!
+```mermaid
+graph LR
+Z{You are here}
+X(Literally Eveything Else) --> A
+A --> B
+B --> https://ianmagenta.github.io/
+```
