--- a/404.md
+++ b/404.md
@@ -3,8 +3,7 @@ permalink: /404.html
 ---
 # 404 - You done messed up!
 There are many pages on this website. But this ain't one of 'em!
-```
-mermaid
+```mermaid
 graph LR
 Z{You are here}
 X(Literally Eveything Else) --> A
