--- a/404.md
+++ b/404.md
@@ -4,25 +4,6 @@ permalink: /404.html
 # 404 - You done messed up!
 There are many pages on this website, but this ain't one of 'em!
 
-<body>
- <pre><code class="language-mermaid">graph LR
-A--&gt;B
-</code></pre>
-
-<div class="mermaid">graph LR
-A--&gt;B
-</div>
-	
-</body>
-<script>
-var config = {
-    startOnLoad:true,
-    theme: 'forest',
-    flowchart:{
-            useMaxWidth:false,
-            htmlLabels:true
-        }
-};
-mermaid.initialize(config);
-window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
-</script>
+You Are | Reality is
+------------ | -------------
+> Here < | Over here: ianmagenta.github.io
