--- a/404.md
+++ b/404.md
@@ -4,6 +4,6 @@ permalink: /404.html
 # 404 - You done messed up!
 There are many pages on this website, but this ain't one of 'em!
 
-You Are | Reality is
+You Are... | Reality is...
 ------------ | -------------
-> Here < | Over here: ianmagenta.github.io
+> Here < | [> Over Here <](https://ianmagenta.github.io/)
