--- a/404.md
+++ b/404.md
@@ -6,4 +6,4 @@ There are many pages on this website, but this ain't one of 'em!
 
 You Are... | Reality is...
 ------------ | -------------
-> Here < | [> Over Here <](https://ianmagenta.github.io/)
+Here | [Over Here](https://ianmagenta.github.io/)
